src/css/hero.css
.background {
    background-color: var(--secondary-black-color);
    border-radius: 30px;
    max-width: 335px;
    padding: 0 20px;
    padding-top: 40px;
}

.hero-main-title {
    font-size: 40px;
    font-weight: 500;
    line-height: 1.10;
    letter-spacing: -0.04em;
}

.hero-main-title-span {
    color: var(--accent-color);
    font-style: italic;
    font-weight: 400;
    margin-right: 6px;
}

.hero-main-paragraph {
    margin-top: 20px;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.285;
    letter-spacing: -0.007em;
}

.hero-second {
    margin-top: 40px;
    display: flex;
    gap: 40px;
}

.hero-students {
    display: flex;
    gap: 4px;
    align-items: center;
    margin-top: 4px;
}

.hero-students-paragraph {
    width: 67px;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.285;
    letter-spacing: -0.014em;
}

.hero-students-arrow {
    fill: var(--primary-white-color);
}

.hero-reviews {
    display: flex;
    gap:12px;
}

.star {
    background-color: var(--accent-color);
    border-radius: 50%;
    padding: 12px;
    width: 44px;
    height: 44px;
}

.hero-star {
    fill: transparent;
    stroke: #121212;
}

.hero-count {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.hero-count-paragraph {
    color: var(--white-opas50-color);
    font-size: 14px;
    font-weight: 400;
    line-height: 1.285;
    letter-spacing: -0.014em;
}

.hero-count-span {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.125;
    letter-spacing: -0.0016em;
}

.hero-image {
    margin: 0 auto;
    margin-top: 31px;
}

@media screen and (min-width: 768px) {

.background {
    max-width: 704px;
    padding: 0 32px;
    padding-top: 64px;
}

    .hero-main-title {
    width: 517px;
    font-size: 60px;
    line-height: 1.066;
    letter-spacing: -0.06em;
}

    .hero-main-paragraph {
    width: 418px;
    }

    .hero-people {
    display: flex;
    gap: 12px;
}

    .hero-people-image {
    width: 137px;
    height: 54px;
}

    .hero-students {
    display: flex;
    flex-direction: column;
    gap: 8px;
    align-items: normal;
    flex-shrink: 0;
    margin: 0;
}

    .hero-students-paragraph {
    width: 82px;
    font-size: 16px;
    line-height: 1.25;
    letter-spacing: -0.0016em;
}

    .star {
    width: 50px;
    height: 50px;
    padding: 15px;
}

    .hero-count {
    gap: 8px;
}

    .hero-count-paragraph {
    letter-spacing: -0.0016em;
}

    .hero-count-span {
    line-height: 1.25;
}

    .hero-image {
    width: 393px;
    margin-top: 40px;
}
}

@media screen and (min-width: 1280px) {

.background {
    padding: 0 50px;
    padding-top: 80px;
    display: flex;
    gap: 20px;
    max-width: 1080px;
}

.hero-main-title {
    font-size: 64px;
    letter-spacing: -0.064em;
}

.hero-main-title-span {
    margin-right: 8px;
}

.hero-second {
    margin-top: 136px;
}

.hero-image {
    margin-top: 0px;
    width: 397px;
}

}

@media screen and (min-width: 1440px) {
.background {
    max-width: 1240px;
    gap: 130px;
}
}

